5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1593_2425.log
== TEST (2019-03-26 10:26:52) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c
m = input("km/l")
print(round(equacao,3) m )
-- ERROR:
File "XXXX", line 6
    print(round(equacao,3) m )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:16) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c
m = input("km/l")
print(round(equacao,3 m))
-- ERROR:
File "XXXX", line 6
    print(round(equacao,3 m))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:41) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c m
m = input("km/l")
print(round(equacao,3))
-- ERROR:
File "XXXX", line 4
    equacao = d/c m
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:46) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m = input("km/l")
print(round(equacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:31) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m = input("km/l")
print(round(equacao,3)m)
-- ERROR:
File "XXXX", line 6
    print(round(equacao,3)m)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:07:11) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m = input("km/l")
print(round(equacao,3)) print(m)
-- ERROR:
File "XXXX", line 6
    print(round(equacao,3)) print(m)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:07:34) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m = input("km/l")
print(round(equacao,3) m ) 
-- ERROR:
File "XXXX", line 6
    print(round(equacao,3) m ) 
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:08:48) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m = input("km/l")
print(round(equacao,3)input("km/l")) 
-- ERROR:
File "XXXX", line 6
    print(round(equacao,3)input()) 
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:11:04) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m = input("km/l")
c = round(equacao,3)
print(c m)
-- ERROR:
File "XXXX", line 7
    print(c m)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:11:19) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m = input("km/l")
c = round(equacao,3)
print(c, m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:11:49) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m =("km/l")
c = round(equacao,3)
print(c, m)
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:12:03) 
-- CODE:
d = float(input("Distancia percorrida:"))
c = float(input("Combustivel gasto:"))

equacao = d/c 
m =("km/l")
c = round(equacao,3)
print(c, m)
-- EXECUTION TIME:
0.12211
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
